# Lightly

./: CMakeLists.txt  README.md  org.kde.KStyle.Lightly.json
colors/: CMakeLists.txt
kdecoration/: CMakeLists.txt  lightly.json  lightlybutton.cpp  lightlybutton.h  lightlydecoration.cpp  lightlydecoration.h  lightlyexceptionlist.cpp  lightlysettingsprovider.cpp  lightlysizegrip.cpp
kdecoration/config/: CMakeLists.txt  kcm_lightlydecoration.cpp  kcm_lightlydecoration.json  lightlyconfigwidget.cpp  lightlyconfigwidget.h  lightlydetectwidget.cpp  lightlydetectwidget.h  lightlyexceptionlistwidget.cpp  lightlylistmodel.h
kstyle/: CMakeLists.txt  lightly.h  lightly.themerc  lightlyblurhelper.cpp  lightlyblurhelper.h  lightlyframeshadow.cpp  lightlyhelper.cpp  lightlyhelper.h  lightlymdiwindowshadow.cpp  lightlymnemonics.cpp  lightlymnemonics.h  lightlypropertynames.cpp  lightlypropertynames.h  lightlyshadowhelper.cpp  lightlyshadowhelper.h  lightlysplitterproxy.cpp  lightlystyle.cpp  lightlystyle.h  lightlywindowmanager.cpp  lightlywindowmanager.h
kstyle/animations/: lightlyanimations.cpp  lightlyanimations.h  lightlydatamap.h  lightlydialdata.cpp  lightlyscrollbardata.cpp  lightlytransitionwidget.cpp  lightlywidgetstateengine.cpp
kstyle/config/: CMakeLists.txt  lightlystyleconfig.h  lightlystyleconfig.json  lightlystyleconfigmodule.cpp  lightlystyleconfigmodule.h  main.cpp
kstyle/debug/: lightlywidgetexplorer.cpp
liblightlycommon/: CMakeLists.txt  lightlyboxshadowrenderer.cpp  lightlyboxshadowrenderer.h
misc/: CMakeLists.txt
misc/gtk/: CMakeLists.txt
misc/gtk/Lightly-GTK/: README.md  index.theme
misc/gtk/Lightly-GTK/gtk-3.0/: gtk.css  gtk.gresource
misc/kde4lightly/: CMakeLists.txt
misc/kde4lightly/src/: CMakeLists.txt
misc/look-and-feel/: CMakeLists.txt
misc/look-and-feel/org.kde.lightly/: metadata.json
misc/look-and-feel/org.kde.lightly/contents/: defaults
misc/look-and-feel/org.xuzhao9.lightly.desktop/: metadata.json
misc/look-and-feel/org.xuzhao9.lightly.desktop/contents/: defaults
misc/plasmaTheme/Lightly/: colors  metadata.desktop  metadata.json
misc/plasmatheme/: CMakeLists.txt
misc/plasmatheme/Lightly/: plasmarc
misc/plasmatheme/Lightly/widgets/: button.svgz
misc/tabbox/: CMakeLists.txt
misc/tabbox/lightly/: metadata.json
misc/tabbox/lightly/contents/ui/: main.qml
